--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 *.js linguist-vendored
+*.css linguist-vendored
 
 *.cs linguist-detectable=true
 
