--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,5 @@
 *.css linguist-vendored
 *.html linguist-vendored
 *.scss linguist-vendored
-*.html linguist-vendored
+*.cs linguist-detectable=true
 
