--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,7 @@
 
 
 /AdminLTE-3.0.4/** linguist-vendored
-/public/** linguist-vendored
+/startbootstrap-resume-gh-pages/** linguist-vendored
 /assets/** linguist-vendored
 /static/** linguist-vendored
 
