--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,3 @@
-
-*.js linguist-vendored
-*.css linguist-vendored
-*.scss linguist-vendored
-*.html linguist-vendored
-
-
-/AdminLTE-3.0.4/** linguist-vendored
-/startbootstrap-resume-gh-pages/** linguist-vendored
-/assets/** linguist-vendored
-/login-form-20/** linguist-vendored
+*.cs linguist-detectable=true
 
 
