--- a/.gitattributes
+++ b/.gitattributes
@@ -1,26 +1,1 @@
-# --- Dışlanacak klasörler (HTML + tema içerikleri) ---
-/AdminLTE-3.0.4/** linguist-vendored
-/startbootstrap-resume-gh-pages/** linguist-vendored
-/login-form-20/** linguist-vendored
-/Views/** linguist-vendored
-
-# --- Dışlanacak dosya türleri ---
-*.html linguist-vendored
-*.htm linguist-vendored
-*.css linguist-vendored
-*.scss linguist-vendored
-*.js linguist-vendored
-*.json linguist-vendored
-*.xml linguist-vendored
-*.svg linguist-vendored
-*.ejs linguist-vendored
-*.yml linguist-vendored
-*.yaml linguist-vendored
-*.config linguist-vendored
-
-# --- C#'ı zorla algılat ---
-*.cs linguist-detectable=true
-/src/** linguist-detectable=true
-/App/** linguist-detectable=true
-/Controllers/** linguist-detectable=true
-/Models/** linguist-detectable=true
+* linguist-vendored
